Coud not get button to work, but keyup works

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </div>
         <div>
           <label for="range">Text Size</label>
-          <input type="range" name="range" id="range" min="0" max="100" />
+          <input type="range" name="range" id="range" min="25" max="100" />
           <p id="textsize">50</p>
         </div>
         <div>
-          <button type="submit" for="mini">Set minimum size.</button>
-          <input type="number" name="mini" id="mini" />
+          <label for="min">Set minimum.</label>
+          <input type="text" id="min-num" />
         </div>
         <div>
-          <button type="submit" for="maxa">Set maximum size.</button>
-          <input type="number" name="maxa" id="maxa" />
+          <label for="max">Set maximum.</label>
+          <input type="text" id="max-num" />
         </div>
         <div>
           <label for="color">Color</label>
