Got rid of hard coded p tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="flex--flex-direction">
         <div>
           <label for="text">Write something!</label>
-          <input type="text" name="" id="" />
+          <input type="text" id="text" />
         </div>
         <div>
           <label for="size">Text Size</label>
@@ -33,9 +33,7 @@
         </div>
       </div>
     </form>
-    <div class="flex flex--justify-content">
-      <p id="textout"></p>
-    </div>
+    <div class="flex flex--justify-content" id="para"></div>
 
     <script src="./scripts.js" type="module"></script>
   </body>
