Added buttons to html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
           <p id="textsize">50</p>
         </div>
         <div>
+          <button type="submit">Set Min Size</button>
+          <input type="number" id="min" />
+          <label for="min"></label>
+        </div>
+
+        <div>
+          <button type="submit">Set Max Size</button>
+          <input type="number" id="max" />
+          <label for="max"></label>
+        </div>
+        <div>
           <label for="color">Color</label>
           <input type="color" name="color" id="color" />
           <p id="textcolor"></p>
