--- a/index.html
+++ b/index.html
@@ -15,35 +15,33 @@
   </head>
   <body>
     <h1>HW11.2</h1>
-    <form class="flex flex--justify-content">
-      <div class="flex--flex-direction">
-        <div>
-          <label for="text">Write something!</label>
-          <input type="text" id="text" />
-        </div>
-        <div>
-          <label for="size">Text Size</label>
-          <input type="range" name="size" id="size" min="0" max="100" />
-          <p id="textsize">50</p>
-        </div>
-        <div>
-          <button type="submit">Set Min Size</button>
-          <input type="number" id="min" />
-          <label for="min"></label>
-        </div>
-
-        <div>
-          <button type="submit">Set Max Size</button>
-          <input type="number" id="max" />
-          <label for="max"></label>
-        </div>
-        <div>
-          <label for="color">Color</label>
-          <input type="color" name="color" id="color" />
-          <p id="textcolor"></p>
-        </div>
+    <div class="flex flex--flex-direction">
+      <div>
+        <label for="text">Write something!</label>
+        <input type="text" id="text" />
       </div>
-    </form>
+      <div>
+        <label for="size">Text Size</label>
+        <input type="range" name="size" id="size" min="0" max="100" />
+        <p id="textsize">50</p>
+      </div>
+      <form>
+        <label for="min">Min Value:</label>
+        <input type="number" id="min" />
+        <button type="submit">Set Min Size</button>
+      </form>
+
+      <form>
+        <label for="max">Max Value:</label>
+        <input type="number" id="max" />
+        <button type="submit">Set Max Size</button>
+      </form>
+      <div>
+        <label for="color">Color</label>
+        <input type="color" name="color" id="color" />
+        <p id="textcolor"></p>
+      </div>
+    </div>
     <div class="flex flex--justify-content" id="para"></div>
 
     <script src="./scripts.js" type="module"></script>
